// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/slider/demo/basic.vue correctly 1`] = `
<div>
  <div id="test" tabindex="-1" class="ant-slider ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 0%; width: 0%;"></div>
    <div class="ant-slider-step"></div>
    <!---->
    <div class="ant-slider-handle" style="left: 0%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" aria-disabled="false"></div>
    <div class="ant-slider-mark"></div>
  </div>
  <div tabindex="-1" class="ant-slider ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track ant-slider-track-1" style="left: 20%; width: 30%;"></div>
    <div class="ant-slider-step"></div>
    <!---->
    <div class="ant-slider-handle ant-slider-handle-1" style="left: 20%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="20" aria-disabled="false"></div>
    <!---->
    <div class="ant-slider-handle ant-slider-handle-2" style="left: 50%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" aria-disabled="false"></div>
    <div class="ant-slider-mark"></div>
  </div> Disabled: <button size="small" type="button" role="switch" aria-checked="false" class="ant-switch-small ant-switch">
    <div class="ant-switch-handle">
      <!---->
    </div><span class="ant-switch-inner"><span class="ant-switch-inner-checked"><!----></span><span class="ant-switch-inner-unchecked"><!----></span></span>
  </button>
</div>
`;

exports[`renders ./components/slider/demo/event.vue correctly 1`] = `
<div class="code-box-demo">
  <div tabindex="-1" class="ant-slider ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 0%; width: 30%;"></div>
    <div class="ant-slider-step"></div>
    <!---->
    <div class="ant-slider-handle" style="left: 30%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="30" aria-disabled="false"></div>
    <div class="ant-slider-mark"></div>
  </div>
  <div tabindex="-1" class="ant-slider ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track ant-slider-track-1" style="left: 20%; width: 30%;"></div>
    <div class="ant-slider-step"></div>
    <!---->
    <div class="ant-slider-handle ant-slider-handle-1" style="left: 20%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="20" aria-disabled="false"></div>
    <!---->
    <div class="ant-slider-handle ant-slider-handle-2" style="left: 50%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" aria-disabled="false"></div>
    <div class="ant-slider-mark"></div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/icon-slider.vue correctly 1`] = `
<div class="icon-wrapper"><span role="img" aria-label="frown" style="color: rgba(0, 0, 0, 0.45);" class="anticon anticon-frown"><svg focusable="false" class="" data-icon="frown" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM512 533c-85.5 0-155.6 67.3-160 151.6a8 8 0 008 8.4h48.1c4.2 0 7.8-3.2 8.1-7.4C420 636.1 461.5 597 512 597s92.1 39.1 95.8 88.6c.3 4.2 3.9 7.4 8.1 7.4H664a8 8 0 008-8.4C667.6 600.3 597.5 533 512 533z"></path></svg></span>
  <div tabindex="-1" class="ant-slider ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 0%; width: 0%;"></div>
    <div class="ant-slider-step"></div>
    <!---->
    <div class="ant-slider-handle" style="left: 0%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="20" aria-valuenow="0" aria-disabled="false"></div>
    <div class="ant-slider-mark"></div>
  </div><span role="img" aria-label="smile" class="anticon anticon-smile"><svg focusable="false" class="" data-icon="smile" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"></path></svg></span>
</div>
`;

exports[`renders ./components/slider/demo/input-number.vue correctly 1`] = `
<div>
  <div class="ant-row">
    <div class="ant-col ant-col-12">
      <div tabindex="-1" class="ant-slider ant-slider-horizontal">
        <div class="ant-slider-rail"></div>
        <div class="ant-slider-track" style="left: 0%; width: 0%;"></div>
        <div class="ant-slider-step"></div>
        <!---->
        <div class="ant-slider-handle" style="left: 0%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="1" aria-valuemax="20" aria-valuenow="1" aria-disabled="false"></div>
        <div class="ant-slider-mark"></div>
      </div>
    </div>
    <div class="ant-col ant-col-4">
      <div class="ant-input-number" style="margin-left: 16px;">
        <div class="ant-input-number-handler-wrap"><span unselectable="on" role="button" aria-label="Increase Value" aria-disabled="false" class="ant-input-number-handler ant-input-number-handler-up"><span role="img" aria-label="up" class="anticon anticon-up ant-input-number-handler-up-inner"><svg focusable="false" class="" data-icon="up" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"></path></svg></span></span><span unselectable="on" role="button" aria-label="Decrease Value" aria-disabled="true" class="ant-input-number-handler ant-input-number-handler-down ant-input-number-handler-down-disabled"><span role="img" aria-label="down" class="anticon anticon-down ant-input-number-handler-down-inner"><svg focusable="false" class="" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg></span></span></div>
        <div class="ant-input-number-input-wrap"><input autocomplete="off" role="spinbutton" aria-valuemin="1" aria-valuemax="20" aria-valuenow="1" step="1" class="ant-input-number-input"></div>
      </div>
    </div>
  </div>
  <div class="ant-row">
    <div class="ant-col ant-col-12">
      <div tabindex="-1" class="ant-slider ant-slider-horizontal">
        <div class="ant-slider-rail"></div>
        <div class="ant-slider-track" style="left: 0%; width: 0%;"></div>
        <div class="ant-slider-step"></div>
        <!---->
        <div class="ant-slider-handle" style="left: 0%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="1" aria-valuenow="0" aria-disabled="false"></div>
        <div class="ant-slider-mark"></div>
      </div>
    </div>
    <div class="ant-col ant-col-4">
      <div class="ant-input-number" style="margin-left: 16px;">
        <div class="ant-input-number-handler-wrap"><span unselectable="on" role="button" aria-label="Increase Value" aria-disabled="false" class="ant-input-number-handler ant-input-number-handler-up"><span role="img" aria-label="up" class="anticon anticon-up ant-input-number-handler-up-inner"><svg focusable="false" class="" data-icon="up" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"></path></svg></span></span><span unselectable="on" role="button" aria-label="Decrease Value" aria-disabled="true" class="ant-input-number-handler ant-input-number-handler-down ant-input-number-handler-down-disabled"><span role="img" aria-label="down" class="anticon anticon-down ant-input-number-handler-down-inner"><svg focusable="false" class="" data-icon="down" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"></path></svg></span></span></div>
        <div class="ant-input-number-input-wrap"><input autocomplete="off" role="spinbutton" aria-valuemin="0" aria-valuemax="1" aria-valuenow="0" step="0.01" class="ant-input-number-input"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/mark.vue correctly 1`] = `
<div id="components-slider-demo-mark">
  <h4>included=true</h4>
  <div tabindex="-1" class="ant-slider ant-slider-with-marks ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 0%; width: 37%;"></div>
    <div class="ant-slider-step"><span class="ant-slider-dot ant-slider-dot-active" style="left: 0%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="left: 26%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="left: 37%;"></span><span class="ant-slider-dot" style="left: 100%;"></span></div>
    <!---->
    <div class="ant-slider-handle" style="left: 37%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="37" aria-disabled="false"></div>
    <div class="ant-slider-mark"><span class="ant-slider-mark-text ant-slider-mark-text-active" style="transform: translateX(-50%); left: 0%;">0°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="transform: translateX(-50%); left: 26%;">26°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="transform: translateX(-50%); left: 37%;">37°C</span><span class="ant-slider-mark-text" style="transform: translateX(-50%); left: 100%; color: rgb(255, 85, 0);"><strong>100°C</strong></span></div>
  </div>
  <div tabindex="-1" class="ant-slider ant-slider-with-marks ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track ant-slider-track-1" style="left: 26%; width: 11%;"></div>
    <div class="ant-slider-step"><span class="ant-slider-dot" style="left: 0%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="left: 26%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="left: 37%;"></span><span class="ant-slider-dot" style="left: 100%;"></span></div>
    <!---->
    <div class="ant-slider-handle ant-slider-handle-1" style="left: 26%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="26" aria-disabled="false"></div>
    <!---->
    <div class="ant-slider-handle ant-slider-handle-2" style="left: 37%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="37" aria-disabled="false"></div>
    <div class="ant-slider-mark"><span class="ant-slider-mark-text" style="transform: translateX(-50%); left: 0%;">0°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="transform: translateX(-50%); left: 26%;">26°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="transform: translateX(-50%); left: 37%;">37°C</span><span class="ant-slider-mark-text" style="transform: translateX(-50%); left: 100%; color: rgb(255, 85, 0);"><strong>100°C</strong></span></div>
  </div>
  <h4>included=false</h4>
  <div tabindex="-1" class="ant-slider ant-slider-with-marks ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <!---->
    <div class="ant-slider-step"><span class="ant-slider-dot" style="left: 0%;"></span><span class="ant-slider-dot" style="left: 26%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="left: 37%;"></span><span class="ant-slider-dot" style="left: 100%;"></span></div>
    <!---->
    <div class="ant-slider-handle" style="left: 37%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="37" aria-disabled="false"></div>
    <div class="ant-slider-mark"><span class="ant-slider-mark-text" style="transform: translateX(-50%); left: 0%;">0°C</span><span class="ant-slider-mark-text" style="transform: translateX(-50%); left: 26%;">26°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="transform: translateX(-50%); left: 37%;">37°C</span><span class="ant-slider-mark-text" style="transform: translateX(-50%); left: 100%; color: rgb(255, 85, 0);"><strong>100°C</strong></span></div>
  </div>
  <h4>marks &amp; step</h4>
  <div tabindex="-1" class="ant-slider ant-slider-with-marks ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 0%; width: 37%;"></div>
    <div class="ant-slider-step"><span class="ant-slider-dot ant-slider-dot-active" style="left: 0%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="left: 26%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="left: 37%;"></span><span class="ant-slider-dot" style="left: 100%;"></span></div>
    <!---->
    <div class="ant-slider-handle" style="left: 37%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="37" aria-disabled="false"></div>
    <div class="ant-slider-mark"><span class="ant-slider-mark-text ant-slider-mark-text-active" style="transform: translateX(-50%); left: 0%;">0°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="transform: translateX(-50%); left: 26%;">26°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="transform: translateX(-50%); left: 37%;">37°C</span><span class="ant-slider-mark-text" style="transform: translateX(-50%); left: 100%; color: rgb(255, 85, 0);"><strong>100°C</strong></span></div>
  </div>
  <h4>step=null</h4>
  <div tabindex="-1" class="ant-slider ant-slider-with-marks ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 0%; width: 37%;"></div>
    <div class="ant-slider-step"><span class="ant-slider-dot ant-slider-dot-active" style="left: 0%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="left: 26%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="left: 37%;"></span><span class="ant-slider-dot" style="left: 100%;"></span></div>
    <!---->
    <div class="ant-slider-handle" style="left: 37%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="37" aria-disabled="false"></div>
    <div class="ant-slider-mark"><span class="ant-slider-mark-text ant-slider-mark-text-active" style="transform: translateX(-50%); left: 0%;">0°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="transform: translateX(-50%); left: 26%;">26°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="transform: translateX(-50%); left: 37%;">37°C</span><span class="ant-slider-mark-text" style="transform: translateX(-50%); left: 100%; color: rgb(255, 85, 0);"><strong>100°C</strong></span></div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/reverse.vue correctly 1`] = `
<div>
  <div tabindex="-1" class="ant-slider ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="right: 0%; width: 30%;"></div>
    <div class="ant-slider-step"></div>
    <!---->
    <div class="ant-slider-handle" style="right: 30%; transform: translateX(+50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="30" aria-disabled="false"></div>
    <div class="ant-slider-mark"></div>
  </div>
  <div tabindex="-1" class="ant-slider ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track ant-slider-track-1" style="right: 20%; width: 30%;"></div>
    <div class="ant-slider-step"></div>
    <!---->
    <div class="ant-slider-handle ant-slider-handle-1" style="right: 20%; transform: translateX(+50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="20" aria-disabled="false"></div>
    <!---->
    <div class="ant-slider-handle ant-slider-handle-2" style="right: 50%; transform: translateX(+50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" aria-disabled="false"></div>
    <div class="ant-slider-mark"></div>
  </div> Reversed: <button size="small" type="button" role="switch" aria-checked="true" class="ant-switch-small ant-switch-checked ant-switch">
    <div class="ant-switch-handle">
      <!---->
    </div><span class="ant-switch-inner"><span class="ant-switch-inner-checked"><!----></span><span class="ant-switch-inner-unchecked"><!----></span></span>
  </button>
</div>
`;

exports[`renders ./components/slider/demo/show-tooltip.vue correctly 1`] = `
<div tabindex="-1" class="ant-slider ant-slider-horizontal">
  <div class="ant-slider-rail"></div>
  <div class="ant-slider-track" style="left: 0%; width: 30%;"></div>
  <div class="ant-slider-step"></div>
  <!--teleport start-->
  <!--teleport end-->
  <div class="ant-tooltip-open ant-slider-handle" style="left: 30%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="30" aria-disabled="false"></div>
  <div class="ant-slider-mark"></div>
</div>
`;

exports[`renders ./components/slider/demo/tip-formatter.vue correctly 1`] = `
<div>
  <div tabindex="-1" class="ant-slider ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 0%; width: 0%;"></div>
    <div class="ant-slider-step"></div>
    <!---->
    <div class="ant-slider-handle" style="left: 0%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" aria-disabled="false"></div>
    <div class="ant-slider-mark"></div>
  </div>
  <div tabindex="-1" class="ant-slider ant-slider-horizontal">
    <div class="ant-slider-rail"></div>
    <div class="ant-slider-track" style="left: 0%; width: 0%;"></div>
    <div class="ant-slider-step"></div>
    <!---->
    <div class="ant-slider-handle" style="left: 0%; transform: translateX(-50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" aria-disabled="false"></div>
    <div class="ant-slider-mark"></div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/vertical.vue correctly 1`] = `
<div style="height: 300px;">
  <div style="display: inline-block; height: 300px; margin-left: 70px;">
    <div tabindex="-1" class="ant-slider ant-slider-vertical">
      <div class="ant-slider-rail"></div>
      <div class="ant-slider-track" style="bottom: 0%; height: 30%;"></div>
      <div class="ant-slider-step"></div>
      <!---->
      <div class="ant-slider-handle" style="bottom: 30%; transform: translateY(+50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="30" aria-disabled="false"></div>
      <div class="ant-slider-mark"></div>
    </div>
  </div>
  <div style="display: inline-block; height: 300px; margin-left: 70px;">
    <div tabindex="-1" class="ant-slider ant-slider-vertical">
      <div class="ant-slider-rail"></div>
      <div class="ant-slider-track ant-slider-track-1" style="bottom: 20%; height: 30%;"></div>
      <div class="ant-slider-step"></div>
      <!---->
      <div class="ant-slider-handle ant-slider-handle-1" style="bottom: 20%; transform: translateY(+50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="20" aria-disabled="false"></div>
      <!---->
      <div class="ant-slider-handle ant-slider-handle-2" style="bottom: 50%; transform: translateY(+50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="50" aria-disabled="false"></div>
      <div class="ant-slider-mark"></div>
    </div>
  </div>
  <div style="display: inline-block; height: 300px; margin-left: 70px;">
    <div tabindex="-1" class="ant-slider ant-slider-with-marks ant-slider-vertical">
      <div class="ant-slider-rail"></div>
      <div class="ant-slider-track ant-slider-track-1" style="bottom: 26%; height: 11%;"></div>
      <div class="ant-slider-step"><span class="ant-slider-dot" style="bottom: 0%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="bottom: 26%;"></span><span class="ant-slider-dot ant-slider-dot-active" style="bottom: 37%;"></span><span class="ant-slider-dot" style="bottom: 100%;"></span></div>
      <!---->
      <div class="ant-slider-handle ant-slider-handle-1" style="bottom: 26%; transform: translateY(+50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="26" aria-disabled="false"></div>
      <!---->
      <div class="ant-slider-handle ant-slider-handle-2" style="bottom: 37%; transform: translateY(+50%);" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="37" aria-disabled="false"></div>
      <div class="ant-slider-mark"><span class="ant-slider-mark-text" style="margin-bottom: -50%; bottom: 0%;">0°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="margin-bottom: -50%; bottom: 26%;">26°C</span><span class="ant-slider-mark-text ant-slider-mark-text-active" style="margin-bottom: -50%; bottom: 37%;">37°C</span><span class="ant-slider-mark-text" style="margin-bottom: -50%; bottom: 100%; color: rgb(255, 85, 0);"><strong>100°C</strong></span></div>
    </div>
  </div>
</div>
`;
